[package]
name = "sss_client"
version = "0.1.0"
authors = ["Aaron Flores <aaronjflores962@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
num-bigint-dig = {version = "0.4.0", features = ["rand", "prime"]}
num-traits = "0.2.8"
clap = "~2.33.0"
dialoguer = "0.4.0"

[dependencies.sss-rs]
path = "../sss"
