[package]
name = "sss_client"
version = "0.2.0"
authors = ["Aaron Flores <aaronjflores962@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.3.0", features = ["derive"] }
sss-rs = "~0.10.0"
